[package]
name = "bytomancer-aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dotenv = "0.15.0"
indexmap = "1.9.2"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["cookies", "blocking"] }
substring = "1.4.5"
